[package]
name = "spodes-rs"
version = "0.2.2"
authors = ["trgv <trgv@tavrida.com>"]
edition = "2021"
rust-version = "1.85"
description = "A pure-Rust DLMS/COSEM stack: interface classes, transport, xDLMS services and security (IEC 62056 and the СТО 34.01-5.1-006-2023 / Р 1323565.1 GOST profiles)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gvtret/spodes-rs"
readme = "README.md"
keywords = ["dlms", "cosem", "iec62056", "metering", "gost"]
categories = ["encoding", "embedded", "network-programming"]
exclude = ["/docs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10.6"
md-5 = "0.10"
sha2 = "0.10"
streebog = "0.10"
kuznyechik = "0.8"
cmac = "0.7"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
ecdsa = "0.16"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hmac = "0.12"
aes-gcm = "0.10"
aead = "0.5"
rand = "0.9.1"

[dev-dependencies]

[[example]]
name = "client_session"
path = "examples/client_session.rs"

[[example]]
name = "server_dispatch"
path = "examples/server_dispatch.rs"

[[example]]
name = "hls_handshake"
path = "examples/hls_handshake.rs"

[[example]]
name = "spodus_concentrator"
path = "examples/spodus_concentrator.rs"

[[example]]
name = "clock_usage"
path = "examples/clock_usage.rs"

[[example]]
name = "data_usage"
path = "examples/data_usage.rs"

[[example]]
name = "register_usage"
path = "examples/register_usage.rs"

[[example]]
name = "profile_generic_usage"
path = "examples/profile_generic_usage.rs"

[[example]]
name = "extended_register_usage"
path = "examples/extended_register_usage.rs"

[[example]]
name = "demand_register_usage"
path = "examples/demand_register_usage.rs"

[[example]]
name = "register_activation_usage"
path = "examples/register_activation_usage.rs"

[[example]]
name = "schedule_usage"
path = "examples/schedule_usage.rs"

[[example]]
name = "script_table_usage"
path = "examples/script_table_usage.rs"

[[example]]
name = "special_days_table_usage"
path = "examples/special_days_table_usage.rs"