[package]
name = "spodes-rs"
version = "0.2.2"
authors = ["trgv <trgv@tavrida.com>"]
edition = "2021"
rust-version = "1.85"
description = "A pure-Rust DLMS/COSEM stack: interface classes, transport, xDLMS services and security (IEC 62056 and the СТО 34.01-5.1-006-2023 / Р 1323565.1 GOST profiles)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gvtret/spodes-rs"
readme = "README.md"
keywords = ["dlms", "cosem", "iec62056", "metering", "gost"]
categories = ["encoding", "embedded", "network-programming"]
exclude = ["/docs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.11"
md-5 = "0.11"
sha2 = "0.11"
streebog = "0.11"
kuznyechik = "0.9"
cmac = "0.8"
p256 = { version = "0.14", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.14", features = ["ecdsa", "ecdh"] }
ecdsa = "0.17"
num-bigint = "0.4.8"
num-integer = "0.1"
num-traits = "0.2"
hmac = "0.13"
aes-gcm = "0.11"
aead = "0.6"
rand = "0.9.4"

[dev-dependencies]

[[example]]
name = "client_session"
path = "examples/client_session.rs"

[[example]]
name = "server_dispatch"
path = "examples/server_dispatch.rs"

[[example]]
name = "hls_handshake"
path = "examples/hls_handshake.rs"

[[example]]
name = "spodus_concentrator"
path = "examples/spodus_concentrator.rs"

[[example]]
name = "clock_usage"
path = "examples/clock_usage.rs"

[[example]]
name = "data_usage"
path = "examples/data_usage.rs"

[[example]]
name = "register_usage"
path = "examples/register_usage.rs"

[[example]]
name = "profile_generic_usage"
path = "examples/profile_generic_usage.rs"

[[example]]
name = "extended_register_usage"
path = "examples/extended_register_usage.rs"

[[example]]
name = "demand_register_usage"
path = "examples/demand_register_usage.rs"

[[example]]
name = "register_activation_usage"
path = "examples/register_activation_usage.rs"

[[example]]
name = "schedule_usage"
path = "examples/schedule_usage.rs"

[[example]]
name = "script_table_usage"
path = "examples/script_table_usage.rs"

[[example]]
name = "special_days_table_usage"
path = "examples/special_days_table_usage.rs"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "udp_client"
path = "examples/udp_client.rs"